--- a/index.html
+++ b/index.html
@@ -11,16 +11,16 @@
   <div class="column-container">
     <div class="column">
       <div class="navbar-container">
-        <div >Tours</div>
+        <div class="tours">Tours</div>
         <!-- <div class="cps-container"><span id="cps">0</span> coffee/second</div>
         <div id="big_coffee">☕️</div> -->
       </div>
     </div>
-    <div class="column">
+    <!-- <div class="column">
       <div class="column-header">Coffee Producers</div>
       <div class="container right" id="producer_container">
       </div>
-    </div>
+    </div> -->
     <!-- <script type="text/javascript" src="data.js"></script>
     <script type="text/javascript" src="script.js"></script> -->
 </body>
