--- a/index.html
+++ b/index.html
@@ -1,28 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="stylesheet" type="text/css" href="style.css" />
+    <title>Mackenzie's Kayak Intern app</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <link rel="stylesheet" type="text/css" href="style.css">
-  <title>Mackenzie's Kayak Intern app</title>
-</head>
-
-<body>
-  <div class="column-container">
-    <div class="column">
+  <body>
+    <div class="page-container">
+      <!-- <div class="column"> -->
       <div class="navbar-container">
+        <div class="kayak-logo">
+          <img src="solution/assets/kayak-logo.svg" alt="kayak-logo" />
+        </div>
         <div class="tours">Tours</div>
         <!-- <div class="cps-container"><span id="cps">0</span> coffee/second</div>
         <div id="big_coffee">☕️</div> -->
       </div>
+      <!-- </div> -->
     </div>
     <!-- <div class="column">
       <div class="column-header">Coffee Producers</div>
       <div class="container right" id="producer_container">
       </div>
-    </div> -->
+    </div>
     <!-- <script type="text/javascript" src="data.js"></script>
     <script type="text/javascript" src="script.js"></script> -->
-</body>
-
+  </body>
 </html>
