--- a/index.html
+++ b/index.html
@@ -8,22 +8,17 @@
 
   <body>
     <div class="page-container">
-      <!-- <div class="column"> -->
       <div class="navbar-container">
         <div class="kayak-logo">
           <img src="solution/assets/kayak-logo.svg" alt="kayak-logo" />
         </div>
         <div class="tours">Tours</div>
-        <!-- <div class="cps-container"><span id="cps">0</span> coffee/second</div>
-        <div id="big_coffee">☕️</div> -->
       </div>
-      <!-- </div> -->
-    </div>
-    <!-- <div class="column">
-      <div class="column-header">Coffee Producers</div>
-      <div class="container right" id="producer_container">
+      <div class="lower-container">
+        <div class="heading">All the best tours, all in one place.</div>
       </div>
     </div>
+
     <!-- <script type="text/javascript" src="data.js"></script>
     <script type="text/javascript" src="script.js"></script> -->
   </body>
