form section css

--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
       </div>
       <div class="lower-container">
         <div class="heading">All the best tours, all in one place.</div>
+        <div class="form-container">
+          <div class="season-form"><span class="season-text">Season</span></div>
+          <div class="category-form">Category</div>
+          <div class="destination-form">Destination</div>
+        </div>
       </div>
     </div>
 
