added destination img

--- a/index.html
+++ b/index.html
@@ -26,6 +26,12 @@
             </div>
           </div>
         </div>
+        <div>
+          <img
+            class="destination-img"
+            src="solution/assets/tuscany-79382.jpg"
+          />
+        </div>
       </div>
     </div>
 
