--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
             class="destination-img"
             src="solution/assets/tuscany-79382.jpg"
           />
+          <div class="destination-title">
+            Matira Beach, Bora Bora, French Polynesian
+          </div>
         </div>
       </div>
     </div>
