fixed form placeholder text

--- a/index.html
+++ b/index.html
@@ -17,9 +17,12 @@
       <div class="lower-container">
         <div class="heading">All the best tours, all in one place.</div>
         <div class="form-container">
-          <div class="season-form"><div class="season-text">Season</div></div>
-          <div class="category-form">Category</div>
-          <div class="destination-form">Destination</div>
+          <div class="season-form"></div>
+          <div class="season-text">Season</div>
+          <div class="category-form"></div>
+          <div class="category-text">Category</div>
+          <div class="destination-form"></div>
+          <div class="destination-text">Destination</div>
           <div class="btn-container">
             <div class="search-btn">
               <img src="solution/assets/search-icon.svg" alt="search-button" />
