--- a/index.html
+++ b/index.html
@@ -18,16 +18,18 @@
       <div class="lower-container">
         <div class="heading">All the best tours, all in one place.</div>
         <!-- <div class="form-container"> -->
-        <div class="season-form"></div>
-        <!-- <div class="season-text">Season</div> -->
-        <form class="season-text">
-          <select id="season-form">
-            <option>Autumn</option>
-            <option>Spring</option>
-            <option>Summer</option>
-            <option>Winter</option>
-          </select>
-        </form>
+        <div class="season-form">
+          <button class="season-text">Season</button>
+          <form id="seasons">
+            <select>
+              <option>Autumn</option>
+              <option>Spring</option>
+              <option>Summer</option>
+              <option>Winter</option>
+            </select>
+          </form>
+        </div>
+
         <div class="category-form"></div>
         <div class="category-text">Category</div>
         <div class="destination-form"></div>
