form info is coming from data set

--- a/index.html
+++ b/index.html
@@ -20,12 +20,9 @@
         <!-- <div class="form-container"> -->
         <div class="season-form">
           <button class="season-text">Season</button>
-          <form id="seasons">
-            <select>
-              <option>Autumn</option>
-              <option>Spring</option>
-              <option>Summer</option>
-              <option>Winter</option>
+          <form id="seasons-names">
+            <select class="seasons-form">
+              <!-- <option>test</option> -->
             </select>
           </form>
         </div>
