fixed lowercase issue

--- a/index.html
+++ b/index.html
@@ -19,11 +19,9 @@
         <div class="heading">All the best tours, all in one place.</div>
         <!-- <div class="form-container"> -->
         <div class="season-form">
-          <button class="season-text">Season</button>
+          <!-- <button class="season-text">Season</button> -->
           <form id="seasons-names">
-            <select class="seasons-form">
-              <!-- <option>test</option> -->
-            </select>
+            <select class="seasons-form"></select>
           </form>
         </div>
 
