added onchange to season form

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="season-form">
           <!-- <button class="season-text">Season</button> -->
           <form id="seasons-names">
-            <select class="seasons-form"></select>
+            <select onchange="selectSeason()" class="seasons-form"></select>
           </form>
         </div>
 
