--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
           </form>
         </div>
 
-        <div class="category-form"></div>
+        <div class="category-form">
+          <select onchange="selectCategory()" class="categories-form"></select>
+        </div>
         <div class="category-text">Category</div>
         <div class="destination-form"></div>
         <div class="destination-text">Destination</div>
