actually fixed duplication issue

--- a/index.html
+++ b/index.html
@@ -21,12 +21,16 @@
         <div class="season-form">
           <!-- <button class="season-text">Season</button> -->
           <form id="seasons-names">
-            <select onchange="selectSeason()" class="seasons-form"></select>
+            <select onchange="selectSeason()" class="seasons-form">
+              <option selected>Season</option>
+            </select>
           </form>
         </div>
 
         <div class="category-form">
-          <select onchange="selectCategory()" class="categories-form"></select>
+          <select onchange="selectCategory()" class="categories-form">
+            <option selected>Category</option>
+          </select>
         </div>
         <div class="category-text">Category</div>
         <div class="destination-form"></div>
