added destination options

--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
           </select>
         </div>
         <div class="category-text">Category</div>
-        <div class="destination-form"></div>
+        <div class="destinations-form">
+          <select class="destination-form"></select>
+        </div>
         <div class="destination-text">Destination</div>
         <div class="btn-container">
           <div class="search-btn">
