--- a/index.html
+++ b/index.html
@@ -34,7 +34,10 @@
         </div>
         <div class="category-text">Category</div>
         <div class="destinations-form">
-          <select class="destination-form"></select>
+          <select
+            onchange="selectDestination()"
+            class="destination-form"
+          ></select>
         </div>
         <div class="destination-text">Destination</div>
         <div class="btn-container">
