correct detination img

--- a/index.html
+++ b/index.html
@@ -42,15 +42,13 @@
         <div class="destination-text">Destination</div>
         <div class="btn-container">
           <div class="search-btn">
+            <button onclick="searchButton()"></button>
             <img src="solution/assets/search-icon.svg" alt="search-button" />
           </div>
         </div>
         <!-- </div> -->
-        <div>
-          <img
-            class="destination-img"
-            src="solution/assets/tuscany-79382.jpg"
-          />
+        <div class="img-container">
+          <!-- <img class="destination-img" src="tuscany-79382.jpg" /> -->
           <div class="destination-title">
             Matira Beach, Bora Bora, French Polynesian
           </div>
