--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
         <!-- </div> -->
         <div class="img-container">
           <!-- <img class="destination-img" src="tuscany-79382.jpg" /> -->
-          <div class="destination-title">
+          <!-- <div class="destination-title">
             Matira Beach, Bora Bora, French Polynesian
-          </div>
+          </div> -->
         </div>
       </div>
     </div>
