fixed button styling

--- a/index.html
+++ b/index.html
@@ -41,18 +41,13 @@
         </div>
         <div class="destination-text">Destination</div>
         <div class="btn-container">
-          <div class="search-btn">
-            <button onclick="searchButton()"></button>
-            <img src="solution/assets/search-icon.svg" alt="search-button" />
+          <div>
+            <input type='image' src='solution/assets/search-icon.svg'class="search-btn" onclick="searchButton()">
+              <!-- <img src="solution/assets/search-icon.svg" alt="search-button" /> -->
+          </input>
           </div>
         </div>
-        <!-- </div> -->
-        <div class="img-container">
-          <!-- <img class="destination-img" src="tuscany-79382.jpg" /> -->
-          <!-- <div class="destination-title">
-            Matira Beach, Bora Bora, French Polynesian
-          </div> -->
-        </div>
+        <div class="img-container"></div>
       </div>
     </div>
 
