--- a/index.html
+++ b/index.html
@@ -21,9 +21,11 @@
         <div class="season-form">
           <!-- <button class="season-text">Season</button> -->
           <form id="seasons-names">
+
             <select onchange="selectSeason()" class="seasons-form">
               <option selected>Season</option>
             </select>
+
           </form>
         </div>
 
@@ -37,7 +39,9 @@
           <select
             onchange="selectDestination()"
             class="destination-form"
-          ></select>
+          >
+          <option selected>Destination</option>
+        </select>
         </div>
         <div class="destination-text">Destination</div>
         <div class="btn-container">
