disable buttons and remove disabled attributes

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <option selected>Category</option>
           </select>
         </div>
-        <div class="category-text">Category</div>
+        <!-- <div class="category-text">Category</div> -->
         <div class="destinations-form">
           <select
             onchange="selectDestination()"
