--- a/index.html
+++ b/index.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8" />
     <link rel="stylesheet" type="text/css" href="style.css" />
 
-    <title>Mackenzie's Kayak Intern app</title>
+    <title>Travel App</title>
   </head>
 
   <body>
     <div class="page-container">
       <div class="navbar-container">
-        <div class="kayak-logo">
-          <img src="solution/assets/kayak-logo.svg" alt="kayak-logo" />
+        <div class="travel-logo">
+          Trip Planner
         </div>
-        <div class="tours">Tours</div>
+
       </div>
       <div class="lower-container">
         <div class="heading">All the best tours, all in one place.</div>
