--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <div class="page-container">
       <div class="navbar-container">
-        <div class="travel-logo">Trip Planner</div>
+        <!-- <div class="travel-logo">Trip Planner</div> -->
       </div>
       <!-- <div class="lower-container"> -->
       <div class="heading">Find your perfect vacation</div>
@@ -35,7 +35,7 @@
             <option selected>Destination</option>
           </select>
         </div>
-        <div class="destination-text">Destination</div>
+        <!-- <div class="destination-text">Destination</div> -->
         <div class="btn-container">
           <input
             type="image"
